# KeySwift

./: CMakeLists.txt  QtKeyToTamilKey.cpp  QtKeyToTamilKey.h  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: QtKeyToTamilKey.h  mainwindow.h
src/: QtKeyToTamilKey.cpp  mainwindow.cpp
